chore: updated existing Java code and unit tests